# bagit-python

./: .coveralls.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  MANIFEST.in  Makefile  Pipfile  README  README.md  README.rst  bag.py  bagit.py  bagitfs.py  bench.py  build.gradle  index.html  params.json  pyproject.toml  setup.cfg  setup.py  test.py  test_bagitfs.py  tox.ini
.github/workflows/: coverage.yml  coveralls.yml  pypi-release.yml  test.yml  tests-bagit-python.yml  tox.yml
auto_bagit_transfer/: DOCUMENTATION.md  auto_bagit_transfer.py  config.ini
bagit/: __init__.py  core.py
locale/: bagit-python.pot
locale/en/LC_MESSAGES/: bagit-python.po
scripts/: bag
src/bagit/: __init__.py
src/bagit/locale/: bagit-python.pot  bagit.pot
src/bagit/locale/en/LC_MESSAGES/: bagit-python.po
test-data/: README
utils/: bench.py  locales.py
