[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bagit"
dynamic = ["version"]
description = "Create and validate BagIt packages"
readme = {file = "README.rst", content-type = "text/x-rst"}
authors = [
    { name = "Chris Adams", email = "chris@improbable.org" },
    { name = "Ed Summers", email = "ehs@pobox.com" }
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: File Sharing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
]
requires-python = ">= 3.9"

[project.scripts]
"bagit" = "bagit:main"

[project.urls]
Homepage = "https://libraryofcongress.github.io/bagit-python/"

[tool]

[tool.ruff]
target-version = "py38"

[tool.isort]
line_length = 110
default_section = "THIRDPARTY"
known_first_party = "bagit"

[tool.pytest.ini_options]
testpaths = ["test.py"]
addopts = "-v"

[tool.coverage.run]
branch = true
include = "src"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
packages = ["src/bagit"]
include = [
  "src/bagit/*.py",
  "src/bagit/locale/*.po",
  "src/bagit/locale/*.mo",
]


[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
