[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bagit"
dynamic = ["version"]
description = "Create and validate BagIt packages"
readme = {file = "README.rst", content-type = "text/x-rst"}
authors = [
    { name = "Chris Adams", email = "chris@improbable.org" },
    { name = "Ed Summers", email = "ehs@pobox.com" }
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: Public Domain",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: File Sharing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
]
requires-python = ">= 3.9"

[project.scripts]
"bagit" = "bagit:main"

[project.urls]
Homepage = "https://libraryofcongress.github.io/bagit-python/"

[tool]

[tool.ruff]
target-version = "py39"

lint.select = [
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "BLE",   # flake8-blind-except
    "C4",    # flake8-comprehensions
    "ERA",   # eradicate
    "EXE",   # flake8-executable
    "F",     # Pyflakes
    "G",     # flake8-logging-format
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "INT",   # flake8-gettext
    "ISC",   # flake8-implicit-str-concat
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PYI",   # flake8-pyi
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "RUF",   # Ruff-specific rules
    "TCH",   # flake8-type-checking
    "TID",   # flake8-tidy-imports
    "UP",    # pyupgrade
    "W",     # pycodestyle
]


[tool.isort]
line_length = 110
default_section = "THIRDPARTY"
known_first_party = "bagit"

[tool.pytest.ini_options]
testpaths = ["test.py"]
addopts = "-v"

[tool.coverage.run]
branch = true
include = "src"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
packages = ["src/bagit"]
include = [
  "src/bagit/*.py",
  "src/bagit/locale/*.po",
  "src/bagit/locale/*.mo",
]


[dependency-groups]
dev = [
    "coverage>=7.8.2",
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]
